# beagle

./: .hgignore  1-ReadMe.txt  2-License.txt  3-ChangeLog.txt  Architecture.md  BitStrManual.md  CMAManual.md  CMakeLists.txt  CoevManual.md  Compiling.md  Deprecated.md  DocOverview.md  Doxyfile  EMOManual.md  ESManual.md  FileFormats.md  FltVecManual.md  GPManual.md  GPTutorial.md  HPCManual.md  IntVecManual.md  IslandManual.md  LinGPManual.md  MasterManual.md  NamingConvention.md  ProjectHome.md  Puppy.md  README.md  SAESManual.md  STGPManual.md  SimpleGATutorial.md  UserGuide.md  index.html  params.json
CMakeMacros/: AllFilesInOne.cmake  MoveConfigFiles.cmake  PerformTest.cmake
CMakeMacros/.svn/: all-wcprops  entries
CMakeMacros/.svn/text-base/: AllFilesInOne.cmake.svn-base
CMakeModules/: FindMPI.cmake  FindPACC.cmake
CMakeModules/.svn/: all-wcprops  entries
CMakeModules/.svn/text-base/: FindOpenMP.cmake.svn-base
CMakeTestCode/: CXX_HAVE_CONST_CAST.cmake.cpp  CXX_HAVE_DYN_CAST.cmake.cpp  CXX_HAVE_EXCEPTIONS.cmake.cpp  CXX_HAVE_ISFINITE.cmake.cpp  CXX_HAVE_LONG_LONG.cmake.cpp  CXX_HAVE_REINTERPRET_CAST.cmake.cpp  CXX_HAVE_SSTREAM.cmake.cpp  CXX_HAVE_STATIC_CAST.cmake.cpp  CXX_HAVE_TEMPLATES.cmake.cpp  CXX_HAVE_TEMPLATE_SCOPED_ARGUMENT_MATCHING.cmake.cpp  CXX_HAVE_UNORDERED_SET.cmake.cpp  CXX_HAVE_UNORDERED_SET_TR1.cmake.cpp  HASHMAP_GNUCXX.cmake.cpp  HASHSET_GNUCXX.cmake.cpp  HASHSET_STD.cmake.cpp
CMakeTestCode/.svn/: all-wcprops  entries
CMakeTestCode/.svn/text-base/: CXX_HAVE_BOOL.cmake.cpp.svn-base  CXX_HAVE_DEFAULT_TEMPLATE_PARAMETERS.cmake.cpp.svn-base  CXX_HAVE_NAMESPACES.cmake.cpp.svn-base  CXX_HAVE_NUMERIC_LIMITS.cmake.cpp.svn-base  CXX_HAVE_RTTI.cmake.cpp.svn-base  CXX_HAVE_TYPENAME.cmake.cpp.svn-base  CXX_HAVE_UNORDERED_MAP.cmake.cpp.svn-base  CXX_HAVE_UNORDERED_MAP_TR1.cmake.cpp.svn-base  HASHMAP_STD.cmake.cpp.svn-base  HASHMAP_STDEXT.cmake.cpp.svn-base  HASHSET_STDEXT.cmake.cpp.svn-base  PACC_HAVE_PARALLEL_STL.cmake.cpp.svn-base
scripts/: astyle-all.sh  astyle-ob.sh  replheader-all.sh  replheader.py
src/: gzstream.h
src/Beagle/: BitStr.hpp  CMA.hpp  Coev.hpp  Core.hpp  EC.hpp  EMO.hpp  ES.hpp  FltVec.hpp  GP.hpp  HPC.hpp  IntVec.hpp  Island.hpp  LinGP.hpp  Master.hpp  SAES.hpp  STGP.hpp  config.hpp.in  macros.hpp
src/Beagle-Examples/ant/: AntEvalOp.cpp  AntEvalOp.hpp  AntMain.cpp  AntSimulator.cpp  AntSimulator.hpp  IfFoodAhead.cpp  IfFoodAhead.hpp  Move.cpp  Move.hpp  Progn.cpp  Progn.hpp  ReadMe.txt  TurnLeft.cpp  TurnLeft.hpp  TurnRight.cpp  TurnRight.hpp  avoider.xml  beagle.conf  correct.xml  looks-without-moving.xml  moves-without-turning.xml  quilter.xml  santafe.trail  turns-without-looking.xml
src/Beagle-Examples/knapsack/: KnapsackEvalOp.cpp  KnapsackEvalOp.hpp  KnapsackMain.cpp  ReadMe.txt  knapsack-npga2.conf  knapsack-nsga2-non-breeder.conf  knapsack-nsga2.conf
src/Beagle-Examples/knapsack-hpc/: KnapsackEvalOp.cpp  KnapsackEvalOp.hpp  KnapsackMain.cpp  beagle.conf
src/Beagle-Examples/maxfct/: MaxFctEvalOp.cpp  MaxFctEvalOp.hpp  MaxFctMain.cpp  ReadMe.txt  beagle.conf  maxfct-generational.conf  maxfct-steadystate.conf
src/Beagle-Examples/maxfctes/: MaxFctESEvalOp.cpp  MaxFctESEvalOp.hpp  MaxFctESMain.cpp  ReadMe.txt  beagle.conf  maxfctes-comma-non-breeder.conf  maxfctes-plus-non-breeder.conf  maxfctes-plus.conf  maxfctes-qr.conf  maxfctes-recombination.conf
src/Beagle-Examples/maxfctfloat/: MaxFctFloatEvalOp.cpp  MaxFctFloatEvalOp.hpp  MaxFctFloatMain.cpp  ReadMe.txt  beagle.conf  maxfctfloat-1+1-es-qr.conf  maxfctfloat-1+1-es.conf  maxfctfloat-cmaes-non-breeder.conf  maxfctfloat-cmaes-qr.conf  maxfctfloat-cmaes.conf  maxfctfloat-generational.conf  maxfctfloat-qr.conf  maxfctfloat-sbx.conf  maxfctfloat-steadystate.conf
src/Beagle-Examples/multiplexer/: IfBoolean.cpp  IfBoolean.hpp  MultiplexerEvalOp.cpp  MultiplexerEvalOp.hpp  MultiplexerMain.cpp  ReadMe.txt  beagle.conf
src/Beagle-Examples/onemax/: OneMaxEvalOp.cpp  OneMaxEvalOp.hpp  OneMaxMain.cpp  ReadMe.txt  beagle.conf  onemax-generational.conf  onemax-steadystate.conf
src/Beagle-Examples/parity/: ParityEvalOp.cpp  ParityEvalOp.hpp  ParityFastEvalOp.cpp  ParityFastEvalOp.hpp  ParityFastMain.cpp  ParityMain.cpp  ReadMe.txt  beagle.conf  parity-adfs.conf  parity-elitism.conf  parity-ema.conf  parity-generational.conf  parity-steadystate.conf
src/Beagle-Examples/spambase/: EphemeralPercent.cpp  EphemeralPercent.hpp  EqualTo.cpp  EqualTo.hpp  IfThenElse.cpp  IfThenElse.hpp  LessThan.cpp  LessThan.hpp  ReadMe.txt  SpambaseEvalOp.cpp  SpambaseEvalOp.hpp  SpambaseMain.cpp  beagle.conf  spambase-generational.conf  spambase-hillclimbing.conf  spambase-steadystate.conf  spambase.cldist  spambase.data
src/Beagle-Examples/symbreg/: ReadMe.txt  SymbRegEvalOp.cpp  SymbRegEvalOp.hpp  SymbRegMain.cpp  beagle.conf  symbreg-adfs.conf  symbreg-ema.conf  symbreg-generational.conf  symbreg-hfc.conf  symbreg-hillclimbing.conf  symbreg-steadystate.conf
src/Beagle-Examples/tsp/: ReadMe.txt  TSPDistanceMap.cpp  TSPDistanceMap.hpp  TSPEvalOp.cpp  TSPEvalOp.hpp  TSPMain.cpp  beagle.conf
src/Beagle-Examples/tsp-hpc/: TSPDistanceMap.cpp  TSPDistanceMap.hpp  TSPEvalOp.cpp  TSPEvalOp.hpp  TSPMain.cpp  beagle.conf
src/Beagle-Examples/zeromin/: ReadMe.txt  ZeroMinEvalOp.cpp  ZeroMinEvalOp.hpp  ZeroMinMain.cpp  beagle.conf  zeromin-generational.conf  zeromin-steadystate.conf
src/Beagle/BitStr/: BitString.cpp  BitString.hpp  CrossoverOnePointOp.hpp  CrossoverTwoPointsOp.hpp  CrossoverUniformOp.hpp  InitRampedOp.cpp  InitRampedOp.hpp  InitUniformOp.cpp  InitUniformOp.hpp  MutationFlipBitOp.cpp  MutationFlipBitOp.hpp  Package.cpp  Package.hpp
src/Beagle/CMA/: AlgoCMAES.cpp  AlgoCMAES.hpp  CMAHolder.cpp  CMAHolder.hpp  InitCMAFltVecOp.cpp  InitCMAFltVecOp.hpp  MuWCommaLambdaCMAFltVecOp.cpp  MuWCommaLambdaCMAFltVecOp.hpp  MutationCMAFltVecOp.cpp  PackageCMAES.cpp  (+6 more)
src/DAGS/: Client.cpp  Client.hpp  Dags.hpp  Distribution.hpp  FileParameters.cpp  FileParameters.hpp  Group.hpp  Job.hpp  Monitor.hpp  Request.hpp  Subgroup.hpp  XMLUtils.cpp  XMLUtils.hpp
src/beagle/: Core.hpp  macros.hpp
(+784 files in other folders)
